--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="relative min-h-screen bg-[#1E1E1E] text-[#F1EDEE]">
-    <!-- Imagem de Fundo (opcional, se você quiser uma textura sutil) -->
+    <!-- Imagem de Fundo -->
     <div class="absolute inset-0 z-0 bg-cover bg-center opacity-80 filter blur-sm" style="
         background-image: url('https://zencoder.ai/hubfs/Coding%20Agent%20-%2016_9%20-%20Dark-1.png');
       " aria-hidden="true"></div>
